add vite config base

--- a/flat-earth-website/index.html
+++ b/flat-earth-website/index.html
@@ -15,7 +15,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Flat earth deniers</title>
+    <title>Flat earth denial</title>
   </head>
   <body>
     <div id="root"></div>
